--- a/pom.xml
+++ b/pom.xml
@@ -12,17 +12,11 @@
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-client</artifactId>
             <version>2.6.0</version>
-        </dependency>
+        </dependency
         <dependency>
             <groupId>org.apache.mrunit</groupId>
             <artifactId>mrunit</artifactId>
-            <version>0.9.0-incubating</version>
-            <classifier>hadoop1</classifier>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.mrunit</groupId>
-            <artifactId>mrunit</artifactId>
-            <version>0.9.0-incubating</version>
+            <version>1.1.0</version>
             <classifier>hadoop2</classifier>
         </dependency>
         <dependency>
